Dodanie interfejsu okienkowego