@@ -2,6 +2,7 @@ import org.gradle.api.tasks.JavaExec
 
 plugins {
     id("java")
+    id("org.openjfx.javafxplugin") version "0.1.0"
 }
 
 group = "pt.training.maven.jee"
@@ -9,6 +10,12 @@ version = "1.0-SNAPSHOT"
 
 repositories {
     mavenCentral()
+}
+
+
+javafx {
+    version = "21.0.7"
+    modules("javafx.controls", "javafx.graphics")
 }
 
 dependencies {
@@ -21,14 +28,14 @@ tasks.test {
     useJUnitPlatform()
 }
 
-        tasks.register<JavaExec>("runServer") {
-            group = ".run"
-            description = "Uruchamia server"
+tasks.register<JavaExec>("runServer") {
+    group = ".run"
+    description = "Uruchamia server"
 
-            classpath = sourceSets["main"].runtimeClasspath
+    classpath = sourceSets["main"].runtimeClasspath
 
-            mainClass.set("pt.training.go.server.GoServer")
-        }
+    mainClass.set("pt.training.go.server.GoServer")
+}
 
 tasks.register<JavaExec>("runClient") {
     group = ".run"
@@ -40,4 +47,22 @@ tasks.register<JavaExec>("runClient") {
     args("localhost")
 
     standardInput = System.`in`
+}
+
+tasks.register<JavaExec>("runGuiClient") {
+    group = ".run"
+    description = "Uruchamia GUI client-a"
+
+    val runtimeCp = configurations.runtimeClasspath.get()
+
+    val javafxModulePath = runtimeCp.filter { it.name.startsWith("javafx-") }
+
+    classpath = sourceSets["main"].runtimeClasspath.filter { !it.name.startsWith("javafx-") }
+
+    mainClass.set("pt.training.go.client.gui.app.GuiClientApp")
+
+    jvmArgs(
+        "--module-path", javafxModulePath.asPath,
+        "--add-modules", javafx.modules.joinToString(",")
+    )
 }
